# ImageCompress

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/liao/imagecompressdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
libnativeimagecompress/: CMakeLists.txt  build.gradle
libnativeimagecompress/src/main/: AndroidManifest.xml
libnativeimagecompress/src/main/cpp/: compress.c  compress.h
libnativeimagecompress/src/main/java/com/lib/imageCompress/: Compress.java  CompressBuilder.java  CompressUtil.java  Constant.java  NativeCompress.java  PictureCompress.java
libnativeimagecompress/src/main/java/com/lib/imageCompress/bean/: CompressResultBean.java
libnativeimagecompress/src/main/java/com/lib/imageCompress/listener/: OnCompressListener.java  OnMultiCompressListener.java
libnativeimagecompress/src/main/res/values/: strings.xml
